// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  previewFeatures = ["selectRelationCount"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}


model Picture {
  id          Int     @id @default(autoincrement())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  url         String
  mimetype    String
  description String
  title       String
  repo        Repo?   @relation(fields: [repoId], references: [id])
  repoId      Int?
}

model Repo {
  id          Int     @id @default(autoincrement())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  owner       User?    @relation(fields: [ownedBy], references: [id])
  ownedBy     Int?
  name        String
  pictures    Picture[]
  permission  Permission
}

model User {
  id        Int      @id @default(autoincrement())
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  username  String   @unique
  password  String
  repos     Repo[]
  friendSend     FriendRequest[] @relation("send")
  friendRecieve  FriendRequest[] @relation("recieve")
}


model FriendRequest {
  id        Int  @id @default(autoincrement())
  send      User? @relation(name: "send", fields: [sendId], references: [id])
  sendId    Int?
  recieve   User? @relation(name: "recieve", fields: [recieveId], references: [id])
  recieveId Int?
  accepted       Boolean  @default(false)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  @@unique([sendId, recieveId])
}

enum Permission {
  PRIVATE
  FRIENDSONLY
  PUBLIC
}